# deer-trade

./: .env.example  .gitignore  LICENSE  Makefile  README.md  conf.yaml.example  langgraph.json  main.py  pyproject.toml
examples/: 中际旭创.md
src/: workflow.py
src/config/: __init__.py  agents.py  loader.py
src/graph/: builder.py  nodes.py  types.py
src/llms/: llm.py
src/prompts/: __init__.py  fundamentals_analyst.j2  growth_analyst.j2  loader.py  news_analyst.j2  portfolio_manager.j2  risk_manager.j2  stock_data.j2  technical_analyst.j2  valuation_analyst.j2
